[package]
name = "kartof-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ws = "0.9.2"
rand = "0.8.5"