[package]
name = "kartof-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ws = "0.9.2"
rand = "0.8.5"
flate2 = "1.0.28"
base64 = "0.21.7"